# P5

./: .gitignore  active_monitoring.py  activemonitor.py  adaptive_data_access.py  backend_test.py  bulkreceiver.py  competitor.py  config.json  fd_profiles.json  field_devices.db  field_devicev2.py  fieldd_devicev3.py  log.txt  logFieldDevice.txt  log_from_start.txt  main.py  network_bridge.service  network_em.py  network_metrics.csv  ntptime.py  passive_monitoring.py  passive_monitoring2.py  passivemonitor.py  requestreceiver.py  requirements.txt  setup_field_devices.py  sniff.py  test.py  test1.py  test_interface.py  test_relay.py  test_sniff.py  websocketclienttest.py  wget.txt
Initial_Headend_Algorithm/: pyproject.toml
NetworkEmulator/: fd_profiles.json  network_emulator.py  throttling_profile.py
PassiveMonitoring/: pyproject.toml
PassiveMonitoring/Client/: field_device.py
PassiveMonitoring/Client/field_device/: field_devices_data.json
PassiveMonitoring/Servers/: PM_websocket.py  PM_websocket_sqlite.py  monitoring_data.db
database/: verify_field_devices.py
fIeld_device_script_for_Passive_monitoring/: field_device_PM.py
field_device/: data_generation.py  field_device.py  field_devices_data.json  websocket_client.py
headend/: active_monitoring.py  adaptive_data_access.py  csv_logger.py  main.py  passive_monitoring.py  requirements.txt  setup_field_devices.py
plot/: barchart.py
relay-box/: start.sh
relay-box/sniffer/: data.py  (+4 more)
relay_box/: bridge.py
sniffer/: app.py  sniff.py
test/: client.py  server.py
test_flask/: app.py  test_of_output.py
(+24 files in other folders)
