[tool.poetry]
name = "p5"
version = "0.1.0"
description = ""
authors = ["mhenr <mhenr@student.aau.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^14.0"
scapy = "^2.6.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
